# uniAPI-gui-backend

./: .dockerignore  .env.example  .replit  Dockerfile  docker-compose.yml  package-lock.json  package.json  pyproject.toml  replit.md
client/src/: App.tsx  index.css
script/: start-uniapi.sh
scripts/: init-db.sql
server/: index.ts  routes.ts  seed.ts  storage.ts
shared/: schema.ts
uniapi-main/: .env.example  CONTRIBUTING.md  DEMO_VIDEO_GUIDE.md  DEPLOY_TEST.md  INSTAGRAM_API_FEATURES.md  INSTAGRAM_API_USER_GUIDE.md  INSTAGRAM_IMPLEMENTATION_COMPLETE.md  INSTAGRAM_READY.md  INSTAGRAM_TESTING_GUIDE.md  INSTAGRAM_TEST_RESULTS.md  LICENSE  PLATFORMS_STATUS.md  POSTIZ_LEARNINGS.md  PROJECT_STATUS.md  QUICKSTART.md  QUICK_START.md  README.md  RECORD_DEMO_FINAL.md  REDDIT_POST_PYTHON.md  ROADMAP_SECTION.md  SETUP_INSTRUCTIONS.md  STAR_HISTORY_SECTION.md  TOPICS.md  TWITTER_IMPLEMENTATION_COMPLETE.md  USE_CASES_SECTION.md  demo.py  demo_visual.py  example_usage.py  facebook_sdk.py  instagram_sdk.py  linkedin_sdk.py  login_twitter.sh  requirements.txt  setup.sh  start.sh  stop.sh  test_dm.py  test_dm_real.py  test_instagram_api.py  tiktok_sdk.py  (+1 more)
uniapi-main/.github/: pull_request_template.md
uniapi-main/backend/: PHASE1_IMPLEMENTATION_COMPLETE.md  README.md  SETUP_AND_TEST_REPORT.md  TWITTER_API_PLAN.md  __init__.py  auto_twitter_forever.py  instagram_login_and_save_auth.py  install.sh  main.py  platforms_auth.json.example  requirements.txt  requirements_simple.txt  run.sh  save_instagram_cookies.py  setup_twitter_auth.py  start_uniapi.sh  stop_uniapi.sh  (+7 more)
(+19 files in other folders)
